# PulseStream

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: BITWARDEN_SETUP.md  DEPLOY.md
.github/workflows/: cd.yml  ci.yml
docs/: API.md  ARCHITECTURE.md
migrations/: README.md  env.py
migrations/versions/: 20260228_1840_64660327c5d2_initial_schema_with_events_and_.py
scripts/: __init__.py  cli.py
src/: __init__.py  config.py  custom_openapi.py  main.py
src/auth/: __init__.py  api_key.py
src/db/: postgres.py  redis_client.py
src/models/: __init__.py  admin.py  analytics.py  database.py  events.py  misc.py
src/routes/: __init__.py  admin.py  ingestion.py  misc.py  query.py
src/schemas/: __init__.py  misc.py
src/services/: __init__.py  producer.py
src/utils/: logging.py
src/workers/: __init__.py  aggregator.py  base_worker.py
tests/: __init__.py  conftest.py  test_admin.py  test_ingestion.py  test_main.py  test_misc.py  test_query.py  test_workers.py
